cssFiles/style.css
/*
general styling for the whole website
*/

body{
    font-family: Verdana, Geneva, Tahoma, sans-serif;
    color: white;
    margin: 0;
    padding: 0;
    background-color: rgb(35, 35, 35);
}

.center{
    display: block;
    margin: auto;
    text-align: center;
}

a {
    color: white;
}

p{
    line-height: 25px;
}

.inline{
    display:inline;
}

/*
social media links
*/
    .social{
        display: flex;
        justify-content: center;
    }

    .social img{
        width: 60px;
        height: 60px;
        margin: 10px;
        border-radius: 50%;
        background-color: black;
    }
    /* Mobile screens */
    @media (max-width: 480px) {
    .social img{
        width: 50px;
        height: 50px;
    }
    }

/*
hamburger menu styling
*/
    .offscreen{
        background-color: black;
        opacity: 80%;
        border-bottom-left-radius: 15px;
        height: auto;
        width: 100%;
        max-width: 220px;
        position: fixed;
        top: 0;
        right: -250px;
        display: flex;
        flex-direction: column;
        transition: right 0.5s ease;
        z-index: 1000;
    }

    .offscreen.active{
        right: 0;
    }

    .offscreen ul{
        list-style: none;
        padding-top: 60px;
        padding-left: 15px;
    }

    .offscreen ul li{
        padding: 5px;
        color: white;
        font-size: 25px;
        font-weight: bold;
        padding: 5px;
    }

    .offscreen ul li:hover{
        background-color: #575757;
        border-radius: 10px;
        display: inline-block;
        padding: 5px;
        text-decoration: none;
        transition: background-color 0.15s ease;
    }
    .offscreen br{
        line-height: 10px;
    }

    .hamburger{
        height: 50px;
        width: 50px;
        margin-left: auto;
        position: relative;
    }

    .hamburger span{
        height: 5px;
        width: 100%;
        background-color: rgb(255, 255, 255);
        border-radius: 20px;
        position: absolute;
        top: 50%;
        left: 50%;
        margin-top: 12px;
        margin-left: -15px;
        transform: translate(-50%, -50%);
        transition: 0.5s ease;
        z-index: 1001;
    }

    .hamburger span:nth-child(1){
        top: 25%;
    }

    .hamburger span:nth-child(3){
        top: 75%;
    }

    .hamburger.active span:nth-child(1){
        top: 50%;
        transform: translate(-50%, -50%) rotate(45deg);
    }
    .hamburger.active span:nth-child(2){
        opacity: 0;
    }
    .hamburger.active span:nth-child(3){
        top: 50%;
        transform: translate(-50%, -50%) rotate(-45deg);
    }

/*other header bar stuff*/

    .bar{
        width: 100%;
        height: 30px;
        background-color: black;
        position: fixed;
        top: 0;
        z-index: 999;
    }

    header{
        top: 0px;
        position: fixed;
        display: flex;
        width: 100%;
        height: 100px;
        background: linear-gradient(to bottom, black, transparent);
        z-index: 1000;
    }

    .navLink{
        text-decoration: none;
        color: white;
        font-size: 1.5rem;
        font-weight: bold;
    }

    .headImg{
        padding-left: 3px; 
        padding-top: 3px; 
        width: auto; 
        height: 70px;
        z-index: 1000;
    }

    .headTxt{
        position: absolute;
        top: 1px;
        right: 75px;
        font-size: 1.4rem;
        font-weight: bold;
        color: white;
    }

/*
manages dropdowns
*/
    .dropdown-container {
        display: none;
        padding-left: 25px;
    }

    .dropdown-container a {
        text-decoration: none;
        font-size: 18px;
        color: white;
        display: block;
        padding: 5px 0;
    }

    .dropdown-container a:hover {
        background-color: #575757;
        border-radius: 5px;
        display: block;
        padding-top: 5px;
        padding-bottom: 5px;
        text-decoration: none;
        font-size: 18px;
        color: white;
        transition: background-color 0.15s ease;
    }

/* Buttons */
    button {
        background-color: rgba(255, 255, 255, 0.35);
        color: white;
        border: none;
        padding: 13px 25px;
        font-size: 25px;
        font-weight: bold;
        cursor: pointer;
        border-radius: 15px;
    }

    button:hover {
        background-color:rgba(0, 0, 0, 0.6);
    }

